# playground

./: .gitignore  ACCESSIBILITY_IMPROVEMENTS.md  BOARD_ENHANCEMENTS.md  BORDER_RADIUS_FIX_SUMMARY.md  BUTTON_ENHANCEMENTS_SUMMARY.md  CHESS_COLOR_SYSTEM.md  CSS_GAP_FIXES_SUMMARY.md  DESIGN_COMPLIANCE_FIXES.md  DESIGN_NITPICKS.md  DESIGN_REVIEW_FINAL.md  DESIGN_REVIEW_ROUND_2.md  DESIGN_TOKENS.md  ERROR_HANDLING_IMPLEMENTATION.md  HONEST_DESIGN_REVIEW.md  IMPLEMENTATION_SUMMARY.md  PYTHON_EDITOR_UX_COMPLETE.md  README.md  WCAG-AA-COMPLIANCE-REPORT.md  flake.nix  playwright-troubleshooting.md  verify-design.mjs
.github/workflows/: deploy.yaml
bots/python-smart-bot/: bot.py
bots/random-bot/: Cargo.toml
bots/random-bot/src/: lib.rs
bots/smart-bot/: Cargo.toml
bots/smart-bot/src/: lib.rs
chess-engine/: Cargo.toml  wasi_snapshot_preview1.reactor.wasm
chess-engine/src/: bindings.rs  board.rs  lib.rs  types.rs  wasm.rs
docs/: architecture.md
docs/plans/: 2026-02-18-ux-and-clippy-fixes.md  2026-02-21-upload-section-implementation.md  2026-02-21-upload-section-redesign.md
site/: astro.config.mjs  package-lock.json  package.json  playwright.config.ts
site/public/bots/: bot-host.js  preview2-shim-cli.js  preview2-shim-filesystem.js  preview2-shim-io.js
site/public/engine/: chess_engine_component.core.wasm  chess_engine_component.d.ts  chess_engine_component.js
site/public/wasm/: chess_engine.js  chess_engine_bg.wasm
site/src/assets/: accessibility-enhancements.css  board-interaction-enhancements.css  button-enhancements.css  chess-board.css  string-constants.js
site/src/components/: ChessBoard.astro
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
site/src/scripts/: board-ui.js  bot-manager.js  chess-game.js  engine.js  python-editor.js  toast.js  ui-controls.js  upload-handler.js
site/tests/: chess.spec.ts
wit/: chess-bot.wit
wit/chess-bot/: bot.wit
wit/chess-engine/: engine.wit
(+19 files in other folders)
